Starting to connect frontend to backend api